src/patterns/navigation-bar/_navigation-bar.scss
/*********************************/
/* BEGIN Pattern: navigation-bar */
/*********************************/

.navigation-bar {
  position: relative;
	border: 0;
	border-radius: 0;
	margin-bottom: 0;
  z-index: 999;
}

.navigation-bar a {
    font-weight: normal;
}

.navigation-bar ul.navigation-bar-nav {
	float: left;
	margin: 0;
	padding: 0;
}

.navigation-bar ul.navigation-bar-nav li {
	float: left;
	list-style: none;
	font-size: 18px;
}

.navigation-bar ul.navigation-bar-nav li a {
	color: white;
	position: relative;
	display: block;
	padding: 10px 15px;
	text-decoration: none;
}

.navigation-bar ul.navigation-bar-nav li a:hover, .navigation-bar ul.navigation-bar-nav li a:focus {
	color: white;
}

.navigation-bar .currentbranch0 a {
}

.subnav {
}

.toggle-navigation {
	display: none;
}


/* Navbar collapse for phones*/

@media (max-width: 767px) {

    .navbar-collapse {
        border-top: 1px solid transparent;
        box-shadow: inset 0 1px 0 rgba(255,255,255,0.1);
    }

    .navigation-bar ul.navigation-bar-nav {
    	float: none;
    }

    .navigation-bar ul.navigation-bar-nav li {
        float: none;
        display: block;
    }

    .navigation-bar ul.navigation-bar-nav li a {
        padding-top: 10px;
        padding-bottom: 10px;
        text-decoration: none;
        border-bottom: solid 1px rgba(255,255,255,0.3);
        text-align: center;
    }

    .toggle-navigation {
    	display: block;
    	border-bottom: solid 0px white;
        text-align: center;
        font-size: 20px;
    }

	.toggle-navigation a {
		color: white;
		display: block;
		width: 100%;
		font-weight: bold;
		text-decoration: none;
		padding: 6px;
	}

	.toggle-navigation a:hover, .toggle-navigation a:focus {
		cursor: pointer;
	}

	.navigation-bar .container {
		padding: 0;
	}

	ul.navigation-bar-nav {
		display: none;
	}

}

/* Navigation bar colors */

	/* blue */

	.navigation-bar {
		background-color: $sta-blue;
	}

	.navigation-bar ul.navigation-bar-nav li a:hover,
	.navigation-bar ul.navigation-bar-nav li a:focus {
		background-color: $sta-blue-hover;
	}



	.navigation-bar .currentbranch0 a{
		background-color: $sta-blue-light;
	}

	.subnav {
		background-color: $sta-blue-light;
	}


	@media (max-width: 767px) {
		.toggle-navigation a:hover,
		.toggle-navigation a:focus {
			background-color: $sta-blue-hover;
			cursor: pointer;
		}
	}

	/* blue-study */

	.accent-blue-study .navigation-bar,
	.navigation-bar.blue-study {
		background-color: $sta-cyan;
	}

	.accent-blue-study .navigation-bar ul.navigation-bar-nav li a:hover,
	.accent-blue-study .navigation-bar ul.navigation-bar-nav li a:focus,
	.navigation-bar.blue-study ul.navigation-bar-nav li a:hover,
	.navigation-bar.blue-study ul.navigation-bar-nav li a:focus {
		background-color: $sta-cyan-hover;
	}

	.accent-blue-study .navigation-bar .currentbranch0 a,
	.navigation-bar.blue-study .currentbranch0 a {
		background-color: $sta-cyan-light;
	}

	.accent-blue-study .subnav,
	.subnav.blue-study {
		background-color: $sta-cyan-light;
	}


	@media (max-width: 767px) {
		.accent-blue-study .toggle-navigation a:hover,
		.blue-study .toggle-navigation a:focus,
		.accent-blue-study .toggle-navigation a:hover,
		.blue-study .toggle-navigation a:focus {
			background-color: $sta-cyan-hover;
			cursor: pointer;
		}
	}


/*********************************/
/* END Pattern: navigation-bar   */
/*********************************/

